Switch snapshot storage to local files
Ditch the use Akka Persistence for snapshots in favor of local files.

// FIXME: 2 failures
// FIXME: deleteSnapshots()

JIRA: CONTROLLER-2134
Change-Id: I601e6d897407e364e1e2f4cd552495d5c4b9b5cf
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>